# 3D_engine

./: CMakeLists.txt  Makefile  README.txt
src/: camera.c  camera.h  default.vert  input.c  input.h  light.c  light.h  main.c  materials.c  materials.h  model.c  model.h  primitives.c  primitives.h  render.h  rendering.c  rendering.h  scene.c  scene.h  shader.c  shader.h  shadow.c  shadow.h  shadows.frag  utils.c  utils.h  window.c  window.h
